# chatter

./: .mise.toml  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
src/: app.py  config.py
src/static/: sock.js
src/templates/: chatroom.html
static/: sock.js
templates/: base.j2.html  chatroom.html  index.html
